// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Halo/appearances default 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    className=""
    data-css-11pbqae=""
  >
    <div>
      default
    </div>
  </div>
</div>
`;

exports[`Storyshots Halo/appearances error 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    className=""
    data-css-1vyecfy=""
  >
    <div>
      error
    </div>
  </div>
</div>
`;

exports[`Storyshots Halo/gapSizes default 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    className=""
    data-css-11pbqae=""
  >
    <div>
      default
    </div>
  </div>
</div>
`;

exports[`Storyshots Halo/gapSizes small 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    className=""
    data-css-11pbqae=""
  >
    <div>
      small
    </div>
  </div>
</div>
`;

exports[`Storyshots Halo/shapes default 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    className=""
    data-css-11pbqae=""
  >
    <div
      shape="default"
    >
      default
    </div>
  </div>
</div>
`;

exports[`Storyshots Halo/shapes pill 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    className=""
    data-css-ls8pec=""
  >
    <div
      shape="pill"
    >
      pill
    </div>
  </div>
</div>
`;

exports[`Storyshots Halo/visible false 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    className=""
    data-css-y7s1d0=""
  >
    <div>
      not visible
    </div>
  </div>
</div>
`;

exports[`Storyshots Halo/visible true 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    className=""
    data-css-11pbqae=""
  >
    <div>
      visible
    </div>
  </div>
</div>
`;

exports[`Storyshots Halo/visibleOnFocus enabled 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    className=""
    data-css-f0o9km=""
  >
    <div>
      visible when focused
    </div>
  </div>
</div>
`;
